@@ -10,24 +10,41 @@ package org.elasticsearch.cluster.metadata;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.test.AbstractNamedWriteableTestCase;
+import org.elasticsearch.xcontent.ToXContent;
 
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+import static org.elasticsearch.test.AbstractXContentTestCase.xContentTester;
+
 public class DataStreamMetadataTests extends AbstractNamedWriteableTestCase<DataStreamMetadata> {
+
+    public void testFromXContent() throws IOException {
+        xContentTester(this::createParser, this::createTestInstance, ToXContent.EMPTY_PARAMS, DataStreamMetadata::fromXContent)
+            .assertEqualsConsumer(this::assertEqualInstances)
+            .test();
+    }
 
     @Override
     protected DataStreamMetadata createTestInstance() {
         if (randomBoolean()) {
-            return new DataStreamMetadata(Collections.emptyMap());
+            return new DataStreamMetadata(Map.of(), Map.of());
         }
         Map<String, DataStream> dataStreams = new HashMap<>();
         for (int i = 0; i < randomIntBetween(1, 5); i++) {
             dataStreams.put(randomAlphaOfLength(5), DataStreamTestHelper.randomInstance());
         }
-        return new DataStreamMetadata(dataStreams);
+
+        Map<String, DataStreamAlias> dataStreamsAliases = new HashMap<>();
+        if (randomBoolean()) {
+            for (int i = 0; i < randomIntBetween(1, 5); i++) {
+                DataStreamAlias alias = DataStreamTestHelper.randomAliasInstance();
+                dataStreamsAliases.put(alias.getName(), alias);
+            }
+        }
+        return new DataStreamMetadata(dataStreams, dataStreamsAliases);
     }
 
     @Override
@@ -37,8 +54,11 @@ public class DataStreamMetadataTests extends AbstractNamedWriteableTestCase<Data
 
     @Override
     protected NamedWriteableRegistry getNamedWriteableRegistry() {
-        return new NamedWriteableRegistry(Collections.singletonList(new NamedWriteableRegistry.Entry(DataStreamMetadata.class,
-            DataStreamMetadata.TYPE, DataStreamMetadata::new)));
+        return new NamedWriteableRegistry(
+            Collections.singletonList(
+                new NamedWriteableRegistry.Entry(DataStreamMetadata.class, DataStreamMetadata.TYPE, DataStreamMetadata::new)
+            )
+        );
     }
 
     @Override
