@@ -7,11 +7,12 @@
 
 package org.elasticsearch.xpack.spatial.index.fielddata;
 
+import org.elasticsearch.common.geo.GeometryNormalizer;
+import org.elasticsearch.common.geo.Orientation;
 import org.elasticsearch.geometry.Geometry;
 import org.elasticsearch.geometry.GeometryCollection;
 import org.elasticsearch.geometry.Rectangle;
 import org.elasticsearch.geometry.ShapeType;
-import org.elasticsearch.index.mapper.GeoShapeIndexer;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xpack.spatial.util.GeoTestUtils;
 
@@ -31,48 +32,67 @@ public class GeometryDocValueTests extends ESTestCase {
 
     @SuppressWarnings("unchecked")
     public void testDimensionalShapeType() throws IOException {
-        GeoShapeIndexer indexer = new GeoShapeIndexer(true, "test");
         assertDimensionalShapeType(randomPoint(false), DimensionalShapeType.POINT);
         assertDimensionalShapeType(randomMultiPoint(false), DimensionalShapeType.POINT);
         assertDimensionalShapeType(randomLine(false), DimensionalShapeType.LINE);
         assertDimensionalShapeType(randomMultiLine(false), DimensionalShapeType.LINE);
-        Geometry randoPoly = indexer.prepareForIndexing(randomValueOtherThanMany(g -> {
+        Geometry randoPoly = randomValueOtherThanMany(g -> {
             try {
-                Geometry newGeo = indexer.prepareForIndexing(g);
+                Geometry newGeo = GeometryNormalizer.apply(Orientation.CCW, g);
                 return newGeo.type() != ShapeType.POLYGON;
             } catch (Exception e) {
                 return true;
             }
-        }, () -> randomPolygon(false)));
-        Geometry randoMultiPoly = indexer.prepareForIndexing(randomValueOtherThanMany(g -> {
+        }, () -> randomPolygon(false));
+        Geometry randoMultiPoly = randomValueOtherThanMany(g -> {
             try {
-                Geometry newGeo = indexer.prepareForIndexing(g);
+                Geometry newGeo = GeometryNormalizer.apply(Orientation.CCW, g);
                 return newGeo.type() != ShapeType.MULTIPOLYGON;
             } catch (Exception e) {
                 return true;
             }
-        }, () -> randomMultiPolygon(false)));
+        }, () -> randomMultiPolygon(false));
         assertDimensionalShapeType(randoPoly, DimensionalShapeType.POLYGON);
         assertDimensionalShapeType(randoMultiPoly, DimensionalShapeType.POLYGON);
-        assertDimensionalShapeType(randomFrom(
-            new GeometryCollection<>(List.of(randomPoint(false))),
-            new GeometryCollection<>(List.of(randomMultiPoint(false))),
-            new GeometryCollection<>(Collections.singletonList(
-                new GeometryCollection<>(List.of(randomPoint(false), randomMultiPoint(false))))))
-            , DimensionalShapeType.POINT);
-        assertDimensionalShapeType(randomFrom(
-            new GeometryCollection<>(List.of(randomPoint(false), randomLine(false))),
-            new GeometryCollection<>(List.of(randomMultiPoint(false), randomMultiLine(false))),
-            new GeometryCollection<>(Collections.singletonList(
-                new GeometryCollection<>(List.of(randomPoint(false), randomLine(false))))))
-            , DimensionalShapeType.LINE);
-        assertDimensionalShapeType(randomFrom(
-            new GeometryCollection<>(List.of(randomPoint(false), indexer.prepareForIndexing(randomLine(false)), randoPoly)),
-            new GeometryCollection<>(List.of(randomMultiPoint(false), randoMultiPoly)),
-            new GeometryCollection<>(Collections.singletonList(
-                new GeometryCollection<>(List.of(indexer.prepareForIndexing(randomLine(false)),
-                    indexer.prepareForIndexing(randoPoly))))))
-            , DimensionalShapeType.POLYGON);
+        assertDimensionalShapeType(
+            randomFrom(
+                new GeometryCollection<>(List.of(randomPoint(false))),
+                new GeometryCollection<>(List.of(randomMultiPoint(false))),
+                new GeometryCollection<>(
+                    Collections.singletonList(new GeometryCollection<>(List.of(randomPoint(false), randomMultiPoint(false))))
+                )
+            ),
+            DimensionalShapeType.POINT
+        );
+        assertDimensionalShapeType(
+            randomFrom(
+                new GeometryCollection<>(List.of(randomPoint(false), randomLine(false))),
+                new GeometryCollection<>(List.of(randomMultiPoint(false), randomMultiLine(false))),
+                new GeometryCollection<>(
+                    Collections.singletonList(new GeometryCollection<>(List.of(randomPoint(false), randomLine(false))))
+                )
+            ),
+            DimensionalShapeType.LINE
+        );
+        assertDimensionalShapeType(
+            randomFrom(
+                new GeometryCollection<>(
+                    List.of(randomPoint(false), GeometryNormalizer.apply(Orientation.CCW, randomLine(false)), randoPoly)
+                ),
+                new GeometryCollection<>(List.of(randomMultiPoint(false), randoMultiPoly)),
+                new GeometryCollection<>(
+                    Collections.singletonList(
+                        new GeometryCollection<>(
+                            List.of(
+                                GeometryNormalizer.apply(Orientation.CCW, randomLine(false)),
+                                GeometryNormalizer.apply(Orientation.CCW, randoPoly)
+                            )
+                        )
+                    )
+                )
+            ),
+            DimensionalShapeType.POLYGON
+        );
     }
 
     public void testRectangleShape() throws IOException {
@@ -84,7 +104,7 @@ public class GeometryDocValueTests extends ESTestCase {
             Geometry rectangle = new Rectangle(minX, maxX, maxY, minY);
             GeometryDocValueReader reader = GeoTestUtils.geometryDocValueReader(rectangle, CoordinateEncoder.GEO);
 
-            Extent expectedExtent  = getExtentFromBox(minX, minY, maxX, maxY);
+            Extent expectedExtent = getExtentFromBox(minX, minY, maxX, maxY);
             assertThat(expectedExtent, equalTo(reader.getExtent()));
             // centroid is calculated using original double values but then loses precision as it is serialized as an integer
             int encodedCentroidX = CoordinateEncoder.GEO.encodeX(((double) minX + maxX) / 2);
@@ -95,10 +115,12 @@ public class GeometryDocValueTests extends ESTestCase {
     }
 
     private static Extent getExtentFromBox(double bottomLeftX, double bottomLeftY, double topRightX, double topRightY) {
-        return Extent.fromPoints(CoordinateEncoder.GEO.encodeX(bottomLeftX),
+        return Extent.fromPoints(
+            CoordinateEncoder.GEO.encodeX(bottomLeftX),
             CoordinateEncoder.GEO.encodeY(bottomLeftY),
             CoordinateEncoder.GEO.encodeX(topRightX),
-            CoordinateEncoder.GEO.encodeY(topRightY));
+            CoordinateEncoder.GEO.encodeY(topRightY)
+        );
 
     }
 
